networkchuck/coffeewithservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nccoffee
  labels:
    app: nccoffee
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nccoffee
  template:
    metadata:
      labels:
        app: nccoffee
    spec:
      containers:
      - name: nccoffee
        image: thenetworkchuck/nccoffee:pourover
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nccoffee
spec:
  type: ClusterIP
  selector:
    app: nccoffee
  ports:
    - name: http
      port: 80
      targetPort: 80
  #   protocol: TCP  # optional protocol
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "X-Frame-Options: Deny";
      more_set_headers "X-Xss-Protection: 1; mode=block";
      more_set_headers "X-Content-Type-Options: nosniff";
  name: networkchuckcoffee-deployment
  namespace: default
spec:
  rules:
    - host: coffee.orionmail.org
      http:
        paths:
        - backend:
            service:
              name: nccoffee
              port:
                number: 80
          path: /
          pathType: ImplementationSpecific
